Fix collab realtime